--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3
 
+ADD data /home/developer/data/
+
 ADD backend.py /home/developer/
 
 ADD requirements.txt /home/developer/
 
 WORKDIR /home/developer/
-
 RUN pip install -r requirements.txt
