updated test julia file

--- a/julia_control/Dockerfile
+++ b/julia_control/Dockerfile
@@ -8,4 +8,6 @@ ADD controllers.jl /usr/myapp/
 
 ADD exogenous.jl /usr/myapp/
 
+ADD test.jl /usr/myapp/
+
 ADD custom_input/occParams.out /usr/myapp/
