(corrected) updated the interface.jl to accept appliance list from backend; updated the text.jl and a placeholder appList.json file for testing purpose

--- a/julia_control/Dockerfile
+++ b/julia_control/Dockerfile
@@ -11,3 +11,5 @@ ADD exogenous.jl /usr/myapp/
 ADD test.jl /usr/myapp/
 
 ADD custom_input/occParams.out /usr/myapp/
+
+ADD temp_files_for_testing/appList.json /usr/myapp/
