explicitly defining the name of docker containter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.1'
 services:
   emulator:
     build: './emulator'
+    container_name: building_emulator
     working_dir: /home/developer
-    logging:
-            driver: none 
+    # logging:
+            # driver: none 
     command: python startREST.py --fmuPath=/home/developer/models/wrapped.fmu --fmuStep=60
