Tested julia connection and added environment variables on the interface

--- a/docker-compose_julia.yml
+++ b/docker-compose_julia.yml
@@ -4,4 +4,4 @@ services:
   control:
     build: './julia_control'
     working_dir: /usr/myapp
-    command: julia interface.jl
+    command: julia test.jl
