Added NUM_EMULATORS option to make to start multiple emulators in background if desired

--- a/docker-compose_emulator.yml
+++ b/docker-compose_emulator.yml
@@ -3,10 +3,9 @@ version: '3.1'
 services:
   emulator:
     build: './emulator'
-    container_name: building_emulator
     working_dir: /home/developer
     ports:
-      - "5000:5000"
+      - "5000-${MAX_PORT}:5000"
     # logging:
             # driver: none 
     command: python startREST.py --fmuPath=/home/developer/models/largeoffice.fmu --fmuStep=60
